--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "loadash": "^1.0.0",
     "lodash": "^4.17.11",
     "vue": "^2.5.22",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-socket.io": "^2.1.1-b"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.4.0",
